Fixing alignment issues and RWD

--- a/main.css
+++ b/main.css
@@ -1,5 +1,12 @@
+main {
+  height: 99vh;
+  overflow: hidden;
+}
+
 .user-name {
-  color: #209c20;
+  /*color: #209c20;*/
+  padding: 1rem;
+  font-size: 2rem;
 }
 
 .answer-span {
@@ -69,6 +76,7 @@ input + label {
   position: relative;
   top: 1px;
   cursor: pointer;
+  font-size: 0.9rem;
 }
 
 input:checked + label {
@@ -82,15 +90,18 @@ input ~ .tab {
 }
 
 .tabs {
-  width: 100%;
+  width: 100%;  
+  height: 90%;
+  padding: 0 0.5rem;
 }
 
 .tabs .tab-label:hover {
   border-bottom: 2px solid #ace7ac;
 }
 
-#summary:checked ~ .summary,
+#about-me:checked ~ .about-me,
 #swot:checked ~ .swot,
+#skills:checked ~ .skills,
 #questions:checked ~ .questions,
 #experience:checked ~ .experience,
 #projects:checked ~ .projects,
@@ -193,4 +204,50 @@ input ~ .tab {
     padding-left: 0.55rem;
   }
 
+}
+
+.about-me {
+  height: 100%;
+}
+
+.name {
+  font-size: 2rem;
+  text-align: center;
+  margin-top: 1rem;
+  line-height: 2.3rem;
+}
+
+.role {
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
+}
+
+.contact {
+  width: 58%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 2rem;
+  font-size: 1.2rem;
+}
+
+.about-me .contents{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  min-height: 100%;
+  padding-bottom: 3rem;
+}
+
+.social-media-list {
+  display: flex;
+  margin: 3rem 0;
+}
+
+.social-media-list li {
+  margin: 1rem;
+  font-size: 1rem;
 }
