--- a/reset.css
+++ b/reset.css
@@ -8,6 +8,8 @@ html {
 body,
 html {
   width: 100%;
+  height: 100%;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -287,11 +289,6 @@ video {
   text-shadow: none;
 }
 
-html,
-body {
-  height: 100%;
-  font-family: "Roboto", sans-serif;
-}
 
 ul {
   list-style-type: none;
